# fmjpeg2k

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  dcmcjp2k.cc  dcmdjp2k.cc  djcodecd.cc  djcodece.cc  djcparam.cc  djdecode.cc  djencode.cc  djrparam.cc  djutils.cc
.github/workflows/: cmake.yml
cmake/: fmjpeg2kConfig.cmake.in
include/fmjpeg2k/: djcodecd.h  djcodece.h  djcparam.h  djdecode.h  djencode.h  djlsutil.h  dldefine.h
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
